--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/telamon/picostore",
   "dependencies": {
+    "msgpackr": "^1.5.1",
     "picorepo": "^1.2.1"
   },
   "devDependencies": {
