--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "url": "https://github.com/telamon/picostore"
   },
   "homepage": "https://github.com/telamon/picostore",
-  "dependencies": {
-    "msgpackr": "^1.5.1",
-    "picorepo": "^1.2.4"
-  },
   "devDependencies": {
     "levelup": "^5.1.1",
     "memdown": "^6.1.1",
-    "standard": "^16.0.4",
-    "tape": "^5.3.2"
+    "msgpackr": "^1.7.0-alpha1",
+    "picofeed": "^3.4.0",
+    "picorepo": "^1.3.2",
+    "standard": "^17.0.0",
+    "tape": "^5.5.3"
+  },
+  "peerDependencies": {
+    "msgpackr": "^1.7.0-alpha1",
+    "picofeed": "^3.4.0",
+    "picorepo": "^1.3.2"
   }
 }
