--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
   },
   "homepage": "https://github.com/telamon/picostore",
   "devDependencies": {
-    "levelup": "^5.1.1",
-    "memdown": "^6.1.1",
+    "memory-level": "^1.0.0",
     "msgpackr": "^1.7.0-alpha1",
     "picofeed": "^3.4.0",
-    "picorepo": "^1.3.3",
+    "picorepo": "^1.4.0",
     "standard": "^17.0.0",
     "tape": "^5.5.3"
   },
   "peerDependencies": {
     "msgpackr": "^1.7.0-alpha1",
     "picofeed": "^3.4.0",
-    "picorepo": "^1.3.3"
+    "picorepo": "^1.4.0"
   }
 }
