--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@telamon/picostore",
-  "version": "1.9.1",
+  "version": "1.9.2",
   "description": "Magical redux-like state handler using picofeed blockchains",
   "main": "index.js",
   "scripts": {
@@ -21,14 +21,14 @@
   "homepage": "https://github.com/telamon/picostore",
   "devDependencies": {
     "memory-level": "^1.0.0",
-    "msgpackr": "^1.6.2",
+    "msgpackr": "^1.7.0-alpha3",
     "picofeed": "^3.4.0",
-    "picorepo": "^1.4.0",
+    "picorepo": "^1.4.3",
     "standard": "^17.0.0",
-    "tape": "^5.5.3"
+    "tape": "^5.6.0"
   },
   "peerDependencies": {
     "picofeed": "^3.4.0",
-    "picorepo": "^1.4.0"
+    "picorepo": "^1.4.3"
   }
 }
