--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "picofeed": "^5.0.1",
     "piconuro": "^1.0.1",
     "picorepo": "^2.1.1",
-    "standard": "^17.1.0",
-    "tape": "^5.7.2"
+    "standard": "^17.1.0"
   },
   "peerDependencies": {
     "cborg": "^4.0.5",
