--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "picoengine",
+  "name": "@telamon/picostore",
   "version": "3.0.0",
   "description": "The block engine and indexer of picofeed",
   "main": "index.js",
