--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@telamon/picostore",
-  "version": "3.0.0-rc1",
+  "version": "3.0.1",
   "description": "The block engine and indexer of picofeed",
   "main": "index.js",
   "type": "module",
